--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,29 +1,16 @@
 {
-    "ecmaFeatures": {
-        "modules": false
+    "parserOptions": {
+        "ecmaVersion": 6
     },
     "env": {
         "node": true,
         "browser": true,
-        "amd": false,
-        "mocha": false,
-        "jasmine": false,
-        "phantomjs": false,
-        "qunit": false,
-        "jquery": false,
-        "prototypejs": false,
-        "shelljs": false,
-        "meteor": false,
-        "mongo": false,
-        "applescript": false,
-        "serviceworker": false,
-        "embertest": false,
         "es6": true
     },
     "rules": {
         "no-alert": 2,
         "no-array-constructor": 2,
-        "no-arrow-condition": 2,
+        "no-confusing-arrow": 2,
         "no-bitwise": 2,
         "no-caller": 2,
         "no-case-declarations": 2,
@@ -45,7 +32,6 @@
         "no-else-return": 2,
         "no-empty": 2,
         "no-empty-character-class": 2,
-        "no-empty-label": 2,
         "no-empty-pattern": 2,
         "no-eq-null": 2,
         "no-eval": 2,
@@ -128,7 +114,7 @@
         "no-var": 2,
         "no-warning-comments": 2,
         "no-with": 2,
-        "no-magic-numbers": 2,
+        "no-magic-numbers": [2, {"ignore": [0]}],
         "array-bracket-spacing": 2,
         "arrow-body-style": 2,
         "arrow-parens": 2,
@@ -193,13 +179,11 @@
         "semi": 2,
         "semi-spacing": 2,
         "sort-vars": 0,
-        "space-after-keywords": 2,
-        "space-before-keywords": 2,
+        "keyword-spacing": 2,
         "space-before-blocks": 2,
         "space-before-function-paren": 0,
         "space-in-parens": 2,
         "space-infix-ops": 2,
-        "space-return-throw-case": 2,
         "space-unary-ops": 2,
         "spaced-comment": 0,
         "strict": 0,
@@ -209,6 +193,15 @@
         "vars-on-top": 0,
         "wrap-iife": 2,
         "wrap-regex": 2,
-        "yoda": 2
+        "yoda": 2,
+        "array-callback-return": 2,
+        "newline-per-chained-call": 0,
+        "no-empty-function": 2,
+        "no-new-symbol": 2,
+        "no-self-assign": 2,
+        "no-unmodified-loop-condition": 2,
+        "no-whitespace-before-property": 2,
+        "prefer-rest-params": 2,
+        "template-curly-spacing": 2
     }
 }
