--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -202,6 +202,15 @@
         "no-unmodified-loop-condition": 2,
         "no-whitespace-before-property": 2,
         "prefer-rest-params": 2,
-        "template-curly-spacing": 2
+        "template-curly-spacing": 2,
+        "no-extra-label": 2,
+        "no-implicit-globals": 0,
+        "no-restricted-imports": 0,
+        "no-unused-labels": 2,
+        "no-useless-constructor": 2,
+        "one-var-declaration-per-line": 2,
+        "id-blacklist": 0,
+        "sort-imports": 0,
+        "yield-star-spacing": 0
     }
 }
