--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -128,7 +128,7 @@
         "comma-dangle": 2,
         "comma-spacing": 2,
         "comma-style": 2,
-        "complexity": 2,
+        "complexity": [2, 10],
         "computed-property-spacing": 2,
         "consistent-return": 0,
         "consistent-this": 2,
