--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "homepage": "https://github.com/EvgenyOrekhov/lints#readme",
   "dependencies": {
+    "bluebird": "^3.3.1",
     "csslint": "^0.10.0",
     "eslint": "^2.2.0",
     "glob": "^7.0.0",
