--- a/package.json
+++ b/package.json
@@ -43,13 +43,13 @@
   },
   "homepage": "https://github.com/EvgenyOrekhov/lints#readme",
   "dependencies": {
-    "bluebird": "^3.3.1",
+    "bluebird": "^3.3.5",
     "csslint": "^0.10.0",
-    "eslint": "^2.2.0",
-    "glob": "^7.0.0",
-    "htmlhint": "^0.9.12",
-    "jshint": "^2.9.1",
-    "jslinter": "^1.1.20160217",
+    "eslint": "^2.9.0",
+    "glob": "^7.0.3",
+    "htmlhint": "^0.9.13",
+    "jshint": "^2.9.2",
+    "jslinter": "^1.2.5",
     "w3cjs": "^0.3.0"
   }
 }
