--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,12 @@
-language: node_js
-node_js:
-    - stable
-    - "4.0"
-matrix:
-    allow_failures:
-        - node_js: "4.0"
+{
+    "language": "node_js",
+    "node_js": [
+        "stable",
+        "4.0"
+    ],
+    "matrix": {
+        "allow_failures": [
+            {"node_js": "4.0"}
+        ]
+    }
+}
