--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -218,6 +218,9 @@
         "no-duplicate-imports": 2,
         "no-unsafe-finally": 2,
         "no-useless-computed-key": 2,
-        "object-property-newline": 2
+        "object-property-newline": 2,
+        "no-useless-rename": 2,
+        "unicode-bom": 2,
+        "no-prototype-builtins": 0
     }
 }
