--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -63,9 +63,9 @@
         "no-multi-spaces": 2,
         "no-multi-str": 2,
         "no-multiple-empty-lines": 2,
-        "no-native-reassign": 2,
+        "no-global-assign": 2,
         "no-negated-condition": 2,
-        "no-negated-in-lhs": 2,
+        "no-unsafe-negation": 2,
         "no-nested-ternary": 2,
         "no-new": 2,
         "no-new-func": 2,
@@ -91,7 +91,7 @@
         "no-sequences": 2,
         "no-shadow": 2,
         "no-shadow-restricted-names": 2,
-        "no-spaced-func": 2,
+        "func-call-spacing": 2,
         "no-sparse-arrays": 2,
         "no-sync": 2,
         "no-ternary": 0,
@@ -227,6 +227,8 @@
         "max-lines": 2,
         "object-curly-newline": 0,
         "multiline-ternary": 2,
-        "no-tabs": 2
+        "no-tabs": 2,
+        "sort-keys": 0,
+        "no-template-curly-in-string": 2
     }
 }
