--- a/package.json
+++ b/package.json
@@ -53,5 +53,9 @@
     "stylelint": "^7.1.0",
     "stylelint-config-standard": "^12.0.0",
     "w3cjs": "^0.3.0"
-  }
+  },
+  "files": [
+      "bin/",
+      "src/"
+  ]
 }
