--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -231,6 +231,10 @@
         "sort-keys": 0,
         "no-template-curly-in-string": 2,
         "symbol-description": 2,
-        "class-methods-use-this": 0
+        "class-methods-use-this": 0,
+        "prefer-numeric-literals": 2,
+        "no-restricted-properties": 0,
+        "line-comment-position": 2,
+        "lines-around-directive": 2
     }
 }
