--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,240 +1,282 @@
 {
     "parserOptions": {
-        "ecmaVersion": 2015
+        "ecmaVersion": 2015,
+        "sourceType": "script",
+        "ecmaFeatures": {
+            "globalReturn": false,
+            "impliedStrict": false,
+            "jsx": false,
+            "experimentalObjectRestSpread": false
+        }
     },
     "env": {
+        "browser": false,
         "node": true,
-        "browser": true,
-        "es6": true
+        "commonjs": false,
+        "shared-node-browser": false,
+        "es6": true,
+        "worker": false,
+        "amd": false,
+        "mocha": false,
+        "jasmine": false,
+        "jest": false,
+        "phantomjs": false,
+        "protractor": false,
+        "qunit": false,
+        "jquery": false,
+        "prototypejs": false,
+        "shelljs": false,
+        "meteor": false,
+        "mongo": false,
+        "applescript": false,
+        "nashorn": false,
+        "serviceworker": false,
+        "atomtest": false,
+        "embertest": false,
+        "webextensions": false,
+        "greasemonkey": false
     },
     "rules": {
-        "no-alert": 2,
-        "no-array-constructor": 2,
-        "no-confusing-arrow": 2,
-        "no-bitwise": 2,
-        "no-caller": 2,
-        "no-case-declarations": 2,
-        "no-catch-shadow": 2,
-        "no-class-assign": 2,
-        "no-cond-assign": 2,
-        "no-console": 0,
-        "no-const-assign": 2,
-        "no-constant-condition": 2,
-        "no-continue": 2,
-        "no-control-regex": 2,
-        "no-debugger": 2,
-        "no-delete-var": 2,
-        "no-div-regex": 2,
-        "no-dupe-class-members": 2,
-        "no-dupe-keys": 2,
-        "no-dupe-args": 2,
-        "no-duplicate-case": 2,
-        "no-else-return": 2,
-        "no-empty": 2,
-        "no-empty-character-class": 2,
-        "no-empty-pattern": 2,
-        "no-eq-null": 2,
-        "no-eval": 2,
-        "no-ex-assign": 2,
-        "no-extend-native": 2,
-        "no-extra-bind": 2,
-        "no-extra-boolean-cast": 2,
-        "no-extra-parens": 0,
-        "no-extra-semi": 2,
-        "no-fallthrough": 2,
-        "no-floating-decimal": 2,
-        "no-func-assign": 2,
-        "no-implicit-coercion": 0,
-        "no-implied-eval": 2,
-        "no-inline-comments": 2,
-        "no-inner-declarations": 2,
-        "no-invalid-regexp": 2,
-        "no-invalid-this": 2,
-        "no-irregular-whitespace": 2,
-        "no-iterator": 2,
-        "no-label-var": 2,
-        "no-labels": 2,
-        "no-lone-blocks": 2,
-        "no-lonely-if": 2,
-        "no-loop-func": 2,
-        "no-mixed-requires": 2,
-        "no-mixed-spaces-and-tabs": 2,
-        "linebreak-style": 2,
-        "no-multi-spaces": 2,
-        "no-multi-str": 2,
-        "no-multiple-empty-lines": 2,
-        "no-global-assign": 2,
-        "no-negated-condition": 2,
-        "no-unsafe-negation": 2,
-        "no-nested-ternary": 2,
-        "no-new": 2,
-        "no-new-func": 2,
-        "no-new-object": 2,
-        "no-new-require": 2,
-        "no-new-wrappers": 2,
-        "no-obj-calls": 2,
-        "no-octal": 2,
-        "no-octal-escape": 2,
-        "no-param-reassign": 2,
-        "no-path-concat": 2,
-        "no-plusplus": 2,
-        "no-process-env": 2,
-        "no-process-exit": 2,
-        "no-proto": 2,
-        "no-redeclare": 2,
-        "no-regex-spaces": 2,
-        "no-restricted-modules": 0,
-        "no-restricted-syntax": 0,
-        "no-return-assign": 2,
-        "no-script-url": 2,
-        "no-self-compare": 2,
-        "no-sequences": 2,
-        "no-shadow": 2,
-        "no-shadow-restricted-names": 2,
-        "func-call-spacing": 2,
-        "no-sparse-arrays": 2,
-        "no-sync": 2,
-        "no-ternary": 0,
-        "no-trailing-spaces": 2,
-        "no-this-before-super": 2,
-        "no-throw-literal": 2,
-        "no-undef": 2,
-        "no-undef-init": 2,
-        "no-undefined": 0,
-        "no-unexpected-multiline": 2,
-        "no-underscore-dangle": 2,
-        "no-unneeded-ternary": 2,
-        "no-unreachable": 2,
-        "no-unused-expressions": 2,
-        "no-unused-vars": 2,
-        "no-use-before-define": 2,
-        "no-useless-call": 2,
-        "no-useless-concat": 2,
-        "no-void": 2,
-        "no-var": 2,
-        "no-warning-comments": 2,
-        "no-with": 2,
-        "no-magic-numbers": [2, {"ignore": [0]}],
-        "array-bracket-spacing": 2,
-        "arrow-body-style": 2,
-        "arrow-parens": 2,
-        "arrow-spacing": 2,
-        "accessor-pairs": 2,
-        "block-scoped-var": 2,
-        "block-spacing": 2,
-        "brace-style": 2,
-        "callback-return": 2,
-        "camelcase": 2,
-        "comma-dangle": 2,
-        "comma-spacing": 2,
-        "comma-style": 2,
-        "complexity": [2, 10],
-        "computed-property-spacing": 2,
-        "consistent-return": 0,
-        "consistent-this": 2,
-        "constructor-super": 2,
-        "curly": 2,
-        "default-case": 2,
-        "dot-location": [2, "property"],
-        "dot-notation": 2,
-        "eol-last": 2,
-        "eqeqeq": 2,
-        "func-names": 2,
-        "func-style": 0,
-        "generator-star-spacing": 2,
-        "global-require": 2,
-        "guard-for-in": 2,
-        "handle-callback-err": 2,
-        "id-length": 2,
-        "indent": 2,
-        "init-declarations": 0,
-        "jsx-quotes": 2,
-        "key-spacing": 2,
-        "lines-around-comment": 2,
-        "max-depth": 2,
-        "max-len": 2,
-        "max-nested-callbacks": 2,
-        "max-params": 2,
-        "max-statements": 2,
-        "new-cap": 2,
-        "new-parens": 2,
-        "newline-after-var": 2,
-        "object-curly-spacing": 2,
-        "object-shorthand": 2,
-        "one-var": 0,
-        "operator-assignment": 2,
-        "operator-linebreak": 0,
-        "padded-blocks": 0,
-        "prefer-arrow-callback": 0,
-        "prefer-const": 2,
-        "prefer-spread": 2,
-        "prefer-reflect": 2,
-        "prefer-template": 2,
-        "quote-props": 0,
-        "quotes": 0,
-        "radix": 2,
-        "id-match": 0,
-        "require-jsdoc": 0,
-        "require-yield": 2,
-        "semi": 2,
-        "semi-spacing": 2,
-        "sort-vars": 0,
-        "keyword-spacing": 2,
-        "space-before-blocks": 2,
-        "space-before-function-paren": 0,
-        "space-in-parens": 2,
-        "space-infix-ops": 2,
-        "space-unary-ops": 2,
-        "spaced-comment": 0,
-        "strict": 0,
-        "use-isnan": 2,
-        "valid-jsdoc": 2,
-        "valid-typeof": 2,
-        "vars-on-top": 0,
-        "wrap-iife": 2,
-        "wrap-regex": 2,
-        "yoda": 2,
-        "array-callback-return": 2,
-        "newline-per-chained-call": 0,
-        "no-empty-function": 2,
-        "no-new-symbol": 2,
-        "no-self-assign": 2,
-        "no-unmodified-loop-condition": 2,
-        "no-whitespace-before-property": 2,
-        "prefer-rest-params": 2,
-        "template-curly-spacing": 2,
-        "no-extra-label": 2,
-        "no-implicit-globals": 0,
-        "no-restricted-imports": 0,
-        "no-unused-labels": 2,
-        "no-useless-constructor": 2,
-        "one-var-declaration-per-line": 2,
-        "id-blacklist": 0,
-        "sort-imports": 0,
-        "yield-star-spacing": 0,
-        "newline-before-return": 2,
-        "no-useless-escape": 2,
-        "max-statements-per-line": 2,
-        "no-duplicate-imports": 2,
-        "no-unsafe-finally": 2,
-        "no-useless-computed-key": 2,
-        "object-property-newline": 2,
-        "no-useless-rename": 2,
-        "unicode-bom": 2,
-        "no-prototype-builtins": 0,
-        "no-mixed-operators": 0,
-        "rest-spread-spacing": 2,
-        "max-lines": 2,
-        "object-curly-newline": 0,
-        "multiline-ternary": 2,
-        "no-tabs": 2,
-        "sort-keys": 0,
-        "no-template-curly-in-string": 2,
-        "symbol-description": 2,
-        "class-methods-use-this": 0,
-        "prefer-numeric-literals": 2,
-        "no-restricted-properties": 0,
-        "line-comment-position": 2,
-        "lines-around-directive": 2
+        "no-alert": "error",
+        "no-array-constructor": "error",
+        "no-confusing-arrow": "error",
+        "no-bitwise": "error",
+        "no-caller": "error",
+        "no-case-declarations": "error",
+        "no-catch-shadow": "error",
+        "no-class-assign": "error",
+        "no-cond-assign": "error",
+        "no-console": "off",
+        "no-const-assign": "error",
+        "no-constant-condition": "error",
+        "no-continue": "error",
+        "no-control-regex": "error",
+        "no-debugger": "error",
+        "no-delete-var": "error",
+        "no-div-regex": "error",
+        "no-dupe-class-members": "error",
+        "no-dupe-keys": "error",
+        "no-dupe-args": "error",
+        "no-duplicate-case": "error",
+        "no-else-return": "error",
+        "no-empty": "error",
+        "no-empty-character-class": "error",
+        "no-empty-pattern": "error",
+        "no-eq-null": "error",
+        "no-eval": "error",
+        "no-ex-assign": "error",
+        "no-extend-native": "error",
+        "no-extra-bind": "error",
+        "no-extra-boolean-cast": "error",
+        "no-extra-parens": "off",
+        "no-extra-semi": "error",
+        "no-fallthrough": "error",
+        "no-floating-decimal": "error",
+        "no-func-assign": "error",
+        "no-implicit-coercion": "off",
+        "no-implied-eval": "error",
+        "no-inline-comments": "error",
+        "no-inner-declarations": "error",
+        "no-invalid-regexp": "error",
+        "no-invalid-this": "error",
+        "no-irregular-whitespace": "error",
+        "no-iterator": "error",
+        "no-label-var": "error",
+        "no-labels": "error",
+        "no-lone-blocks": "error",
+        "no-lonely-if": "error",
+        "no-loop-func": "error",
+        "no-mixed-requires": "error",
+        "no-mixed-spaces-and-tabs": "error",
+        "linebreak-style": "error",
+        "no-multi-spaces": "error",
+        "no-multi-str": "error",
+        "no-multiple-empty-lines": "error",
+        "no-global-assign": "error",
+        "no-negated-condition": "error",
+        "no-unsafe-negation": "error",
+        "no-nested-ternary": "error",
+        "no-new": "error",
+        "no-new-func": "error",
+        "no-new-object": "error",
+        "no-new-require": "error",
+        "no-new-wrappers": "error",
+        "no-obj-calls": "error",
+        "no-octal": "error",
+        "no-octal-escape": "error",
+        "no-param-reassign": "error",
+        "no-path-concat": "error",
+        "no-plusplus": "error",
+        "no-process-env": "error",
+        "no-process-exit": "error",
+        "no-proto": "error",
+        "no-redeclare": "error",
+        "no-regex-spaces": "error",
+        "no-restricted-modules": "off",
+        "no-restricted-syntax": "off",
+        "no-return-assign": "error",
+        "no-script-url": "error",
+        "no-self-compare": "error",
+        "no-sequences": "error",
+        "no-shadow": "error",
+        "no-shadow-restricted-names": "error",
+        "func-call-spacing": "error",
+        "no-sparse-arrays": "error",
+        "no-sync": "error",
+        "no-ternary": "off",
+        "no-trailing-spaces": "error",
+        "no-this-before-super": "error",
+        "no-throw-literal": "error",
+        "no-undef": "error",
+        "no-undef-init": "error",
+        "no-undefined": "off",
+        "no-unexpected-multiline": "error",
+        "no-underscore-dangle": "error",
+        "no-unneeded-ternary": "error",
+        "no-unreachable": "error",
+        "no-unused-expressions": "error",
+        "no-unused-vars": "error",
+        "no-use-before-define": "error",
+        "no-useless-call": "error",
+        "no-useless-concat": "error",
+        "no-void": "error",
+        "no-var": "error",
+        "no-warning-comments": "error",
+        "no-with": "error",
+        "no-magic-numbers": [
+            "error",
+            {
+                "ignore": [
+                    0
+                ]
+            }
+        ],
+        "array-bracket-spacing": "error",
+        "arrow-body-style": "error",
+        "arrow-parens": "error",
+        "arrow-spacing": "error",
+        "accessor-pairs": "error",
+        "block-scoped-var": "error",
+        "block-spacing": "error",
+        "brace-style": "error",
+        "callback-return": "error",
+        "camelcase": "error",
+        "comma-dangle": "error",
+        "comma-spacing": "error",
+        "comma-style": "error",
+        "complexity": [
+            "error",
+            10
+        ],
+        "computed-property-spacing": "error",
+        "consistent-return": "off",
+        "consistent-this": "error",
+        "constructor-super": "error",
+        "curly": "error",
+        "default-case": "error",
+        "dot-location": [
+            "error",
+            "property"
+        ],
+        "dot-notation": "error",
+        "eol-last": "error",
+        "eqeqeq": "error",
+        "func-names": "error",
+        "func-style": "off",
+        "generator-star-spacing": "error",
+        "global-require": "error",
+        "guard-for-in": "error",
+        "handle-callback-err": "error",
+        "id-length": "error",
+        "indent": "error",
+        "init-declarations": "off",
+        "jsx-quotes": "error",
+        "key-spacing": "error",
+        "lines-around-comment": "error",
+        "max-depth": "error",
+        "max-len": "error",
+        "max-nested-callbacks": "error",
+        "max-params": "error",
+        "max-statements": "error",
+        "new-cap": "error",
+        "new-parens": "error",
+        "newline-after-var": "error",
+        "object-curly-spacing": "error",
+        "object-shorthand": "error",
+        "one-var": "off",
+        "operator-assignment": "error",
+        "operator-linebreak": "off",
+        "padded-blocks": "off",
+        "prefer-arrow-callback": "off",
+        "prefer-const": "error",
+        "prefer-spread": "error",
+        "prefer-reflect": "error",
+        "prefer-template": "error",
+        "quote-props": "off",
+        "quotes": "off",
+        "radix": "error",
+        "id-match": "off",
+        "require-jsdoc": "off",
+        "require-yield": "error",
+        "semi": "error",
+        "semi-spacing": "error",
+        "sort-vars": "off",
+        "keyword-spacing": "error",
+        "space-before-blocks": "error",
+        "space-before-function-paren": "off",
+        "space-in-parens": "error",
+        "space-infix-ops": "error",
+        "space-unary-ops": "error",
+        "spaced-comment": "off",
+        "strict": "off",
+        "use-isnan": "error",
+        "valid-jsdoc": "error",
+        "valid-typeof": "error",
+        "vars-on-top": "off",
+        "wrap-iife": "error",
+        "wrap-regex": "error",
+        "yoda": "error",
+        "array-callback-return": "error",
+        "newline-per-chained-call": "off",
+        "no-empty-function": "error",
+        "no-new-symbol": "error",
+        "no-self-assign": "error",
+        "no-unmodified-loop-condition": "error",
+        "no-whitespace-before-property": "error",
+        "prefer-rest-params": "error",
+        "template-curly-spacing": "error",
+        "no-extra-label": "error",
+        "no-implicit-globals": "off",
+        "no-restricted-imports": "off",
+        "no-unused-labels": "error",
+        "no-useless-constructor": "error",
+        "one-var-declaration-per-line": "error",
+        "id-blacklist": "off",
+        "sort-imports": "off",
+        "yield-star-spacing": "off",
+        "newline-before-return": "error",
+        "no-useless-escape": "error",
+        "max-statements-per-line": "error",
+        "no-duplicate-imports": "error",
+        "no-unsafe-finally": "error",
+        "no-useless-computed-key": "error",
+        "object-property-newline": "error",
+        "no-useless-rename": "error",
+        "unicode-bom": "error",
+        "no-prototype-builtins": "off",
+        "no-mixed-operators": "off",
+        "rest-spread-spacing": "error",
+        "max-lines": "error",
+        "object-curly-newline": "off",
+        "multiline-ternary": "error",
+        "no-tabs": "error",
+        "sort-keys": "off",
+        "no-template-curly-in-string": "error",
+        "symbol-description": "error",
+        "class-methods-use-this": "off",
+        "prefer-numeric-literals": "error",
+        "no-restricted-properties": "off",
+        "line-comment-position": "error",
+        "lines-around-directive": "error"
     }
 }
