--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,47 @@
 {
     "extends": "hardcore",
+    "plugins": [
+        "promise",
+        "fp"
+    ],
     "env": {
         "node": true
     },
     "rules": {
-        "no-console": "off"
+        "no-console": "off",
+
+        "promise/param-names": "error",
+        "promise/always-return": "error",
+        "promise/catch-or-return": "error",
+        "promise/no-native": "off",
+
+        "fp/no-arguments": "error",
+        "fp/no-class": "error",
+        "fp/no-delete": "error",
+        "fp/no-events": "error",
+        "fp/no-get-set": "error",
+        "fp/no-let": "error",
+        "fp/no-loops": "error",
+        "fp/no-mutating-assign": "error",
+        "fp/no-mutating-methods": "error",
+        "fp/no-mutation": [
+            "error",
+            {
+                "commonjs": true,
+                "exceptions": [
+                    {
+                        "object": "process",
+                        "property": "exitCode"
+                    }
+                ]
+            }
+        ],
+        "fp/no-nil": "off",
+        "fp/no-proxy": "error",
+        "fp/no-rest-parameters": "error",
+        "fp/no-this": "error",
+        "fp/no-throw": "error",
+        "fp/no-unused-expression": "off",
+        "fp/no-valueof-field": "error"
     }
 }
