Fix #5 Add Bootlint
If you already have a `.lints.json`, in order to use Bootlint you
need to add it to your `.lints.json`, as in
[src/default.lints.json](src/default.lints.json).

If you wish to disable some of the Bootlint's linters you can
create a `.bootlintrc.json` file in the root of your project with
an array of string linter IDs to disable, e. g.

```json
["W001", "W002", "W003"]
```

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lints",
-  "version": "6.0.0",
+  "version": "7.0.0",
   "description": "Lint all your JavaScript, CSS and HTML with a single command",
   "keywords": [
     "lint",
@@ -44,6 +44,7 @@
   "homepage": "https://github.com/EvgenyOrekhov/lints#readme",
   "dependencies": {
     "bluebird": "^3.4.6",
+    "bootlint": "^0.14.2",
     "csslint": "^1.0.3",
     "eslint": "^3.5.0",
     "glob": "^7.1.0",
