--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,10 @@
         "promise/always-return": "error",
         "promise/catch-or-return": "error",
         "promise/no-return-wrap": "error",
+        "promise/no-nesting": "error",
+        "promise/no-promise-in-callback": "error",
+        "promise/avoid-new": "error",
+        "promise/no-callback-in-promise": "error",
         "promise/no-native": "off",
         "promise/prefer-await-to-then": "off",
         "promise/prefer-await-to-callbacks": "off",
