Add "stylelint" and "bootlint" keywords to package.json
[skip ci]

--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "jshint",
     "eslint",
     "csslint",
+    "stylelint",
     "htmlhint",
     "w3cjs",
+    "bootlint",
     "w3c",
     "javascript",
     "js",
