--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "w3cjs",
     "bootlint",
     "markdownlint",
+    "remark-lint",
     "w3c",
     "javascript",
     "js",
@@ -56,6 +57,10 @@
     "jshint": "^2.9.4",
     "jslinter": "^1.5.8",
     "markdownlint": "^0.3.1",
+    "remark": "^6.2.0",
+    "remark-lint": "^5.2.0",
+    "remark-preset-lint-consistent": "^1.0.0",
+    "remark-preset-lint-recommended": "^1.0.0",
     "stylelint": "^7.6.0",
     "stylelint-config-standard": "^15.0.0",
     "w3cjs": "^0.3.0"
