--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,7 @@
             "error",
             5
         ],
+        "prefer-destructuring": "off",
 
         "promise/param-names": "error",
         "promise/always-return": "error",
@@ -52,7 +53,12 @@
         "fp/no-rest-parameters": "error",
         "fp/no-this": "error",
         "fp/no-throw": "error",
-        "fp/no-unused-expression": "off",
+        "fp/no-unused-expression": [
+            "off",
+            {
+                "allowUseStrict": true
+            }
+        ],
         "fp/no-valueof-field": "error"
     }
 }
