--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "markdown"
   ],
   "scripts": {
-    "test": "./bin/lints"
+    "lint": "./bin/lints",
+    "test": "tap test/*.js --cov",
+    "posttest": "tap --coverage-report=text-summary && tap --coverage-report=html",
+    "tap": "tap"
   },
   "bin": {
     "lints": "./bin/lints"
@@ -52,11 +55,12 @@
     "bootlint": "^0.14.2",
     "csslint": "^1.0.5",
     "eslint": "^3.16.1",
-    "glob": "^7.1.1",
+    "globby": "^6.1.0",
     "htmlhint": "^0.9.13",
     "jshint": "^2.9.4",
     "jslinter": "^1.5.14",
     "markdownlint": "^0.3.1",
+    "ramda": "^0.23.0",
     "remark": "^6.2.0",
     "remark-lint": "^5.4.0",
     "remark-preset-lint-consistent": "^1.0.0",
@@ -72,6 +76,7 @@
   "devDependencies": {
     "eslint-config-hardcore": "^1.9.0",
     "eslint-plugin-fp": "^2.3.0",
-    "eslint-plugin-promise": "^3.4.2"
+    "eslint-plugin-promise": "^3.5.0",
+    "tap": "^10.2.2"
   }
 }
