--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   ],
   "scripts": {
     "lint": "./bin/lints",
-    "test": "tap test/*.js --cov",
+    "test": "tap test/*.js test/linters/*.js --cov",
     "posttest": "tap --coverage-report=text-summary && tap --coverage-report=html",
     "tap": "tap"
   },
