--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   ],
   "scripts": {
     "lint": "./bin/lints",
+    "pretest": "npm run lint",
     "test": "tap test/*.js test/linters/*.js --cov",
     "posttest": "tap --coverage-report=text-summary && tap --coverage-report=html",
     "tap": "tap"
