--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
     "remark-preset-lint-recommended": "^2.0.0",
     "stylelint": "^7.9.0",
     "stylelint-config-standard": "^16.0.0",
-    "w3cjs": "^0.3.0"
+    "w3cjs": "^0.3.0",
+    "wordwrap": "^1.0.0"
   },
   "files": [
     "bin/",
