--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   "dependencies": {
     "bluebird": "^3.4.7",
     "bootlint": "^0.14.2",
+    "chalk": "^1.1.3",
     "csslint": "^1.0.5",
     "eslint": "^3.16.1",
     "globby": "^6.1.0",
@@ -76,6 +77,7 @@
     "src/"
   ],
   "devDependencies": {
+    "ansi-styles": "^3.0.0",
     "eslint-config-hardcore": "^1.9.0",
     "eslint-plugin-fp": "^2.3.0",
     "eslint-plugin-promise": "^3.5.0",
