Exclude tests from Code Climate duplication analysis

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -12,7 +12,10 @@
                 "languages": [
                     "javascript"
                 ]
-            }
+            },
+            "exclude_paths": [
+                "test/"
+            ]
         }
     },
     "ratings": {
