--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,7 @@
 {
-    "extends": "hardcore",
+    "extends": "hardcore-fp",
     "plugins": [
-        "promise",
-        "fp"
+        "promise"
     ],
     "env": {
         "node": true
@@ -34,15 +33,6 @@
         "promise/prefer-await-to-then": "off",
         "promise/prefer-await-to-callbacks": "off",
 
-        "fp/no-arguments": "error",
-        "fp/no-class": "error",
-        "fp/no-delete": "error",
-        "fp/no-events": "error",
-        "fp/no-get-set": "error",
-        "fp/no-let": "error",
-        "fp/no-loops": "error",
-        "fp/no-mutating-assign": "error",
-        "fp/no-mutating-methods": "error",
         "fp/no-mutation": [
             "error",
             {
@@ -54,18 +44,6 @@
                     }
                 ]
             }
-        ],
-        "fp/no-nil": "off",
-        "fp/no-proxy": "error",
-        "fp/no-rest-parameters": "error",
-        "fp/no-this": "error",
-        "fp/no-throw": "error",
-        "fp/no-unused-expression": [
-            "off",
-            {
-                "allowUseStrict": true
-            }
-        ],
-        "fp/no-valueof-field": "error"
+        ]
     }
 }
