--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
         "remark-preset-lint-recommended": "^2.0.0",
         "stylelint": "^7.11.0",
         "stylelint-config-standard": "^16.0.0",
-        "w3cjs": "^0.3.2",
+        "w3cjs": "^0.4.0",
         "wordwrap": "^1.0.0"
     },
     "files": [
@@ -80,6 +80,7 @@
         "ansi-styles": "^3.0.0",
         "eslint-config-hardcore-fp": "^1.1.0",
         "eslint-plugin-promise": "^3.5.0",
+        "nock": "^9.0.13",
         "tap": "^10.3.3"
     }
 }
