Fix #24 - eslint-plugin-import doesn't work properly
Pass the name of the file that is being linted to ESLint.
This also fixes other ESLint rules that depend on the name of the file.

--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "devDependencies": {
         "ansi-styles": "^3.2.1",
         "eslint-config-hardcore-fp": "^5.0.2",
+        "eslint-plugin-import": "^2.14.0",
         "nock": "^10.0.0",
         "tap": "^12.0.1"
     }
