--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
         "htmlhint": "^0.10.1",
         "js-yaml": "^3.12.0",
         "jshint": "^2.9.6",
-        "jslinter": "^1.5.47",
+        "jslint-node": "^1.2.5",
         "markdownlint": "^0.11.0",
         "ramda": "^0.25.0",
         "remark": "^9.0.0",
