--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
         "eslint-config-hardcore-fp": "^5.4.1",
         "eslint-plugin-import": "^2.18.2",
         "nock": "^10.0.6",
+        "remark-lint-list-item-indent": "^1.0.4",
         "tap": "^12.7.0"
     }
 }
