--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
     ],
     "devDependencies": {
         "ansi-styles": "^4.2.0",
-        "eslint-config-hardcore-fp": "^7.3.0",
+        "eslint-config-hardcore": "^7.4.0",
         "nock": "^11.7.0",
         "remark-lint-list-item-indent": "^1.0.4",
         "tap": "^12.7.0"
