--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-    "extends": ["hardcore", "hardcore/fp"],
+    "extends": ["hardcore", "hardcore/fp", "hardcore/node"],
 
     "env": {
         "node": true
